--- a/html/global/header.html
+++ b/html/global/header.html
@@ -1,3 +1,15 @@
-<header></header>
-    <h1>FAS</h1>
+<header class="has-background-primary p-3">
+    <div class="container">
+        <div class="columns is-vcentered">
+            <!-- Logo -->
+            <div class="column is-narrow">
+                <img src="assets/logo.png" alt="FAS Logo" width="100">
+            </div>
+
+            <!-- Title -->
+            <div class="column">
+                <h1 class="title has-text-white">FAS</h1>
+            </div>
+        </div>
+    </div>
 </header>
