--- a/html/global/footer.html
+++ b/html/global/footer.html
@@ -1,3 +1,9 @@
-<footer></footer>
-    <p>powered by bimsolutionscentre.com</p>
+<footer class="has-background-primary p-3">
+    <div class="container">
+        <div class="columns is-vcentered">
+            <p>
+                Powered by <a href="https://bimsolutionscentre.com" target="_blank" class="has-text-white">bimsolutionscentre.com</a>
+            </p>
+        </div>
+    </div>
 </footer>
