--- a/html/global/footer.html
+++ b/html/global/footer.html
@@ -1,9 +1,11 @@
 <footer class="has-background-primary p-3">
     <div class="container">
         <div class="columns is-vcentered">
-            <p>
-                Powered by <a href="https://bimsolutionscentre.com" target="_blank" class="has-text-white">bimsolutionscentre.com</a>
-            </p>
+            <div class="column has-text-centered">
+                <p>
+                    Powered by <a href="https://bimsolutionscentre.com" target="_blank" class="has-text-white">bimsolutionscentre.com</a>
+                </p>
+            </div>
         </div>
     </div>
 </footer>
