--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -1,8 +1,13 @@
-<h3>Select sheets to combine</h3>
-<form id="sheetsForm">
-    <div id="sheetsList">
-        <!-- Sheets will be dynamically added here -->
+<section class="section">
+    <div class="container">
+        <h3 class="title is-4">Select Sheets to Combine</h3>
+        <form id="sheetsForm">
+            <div id="sheetsList" class="field">
+                <!-- Sheets will be dynamically added here -->
+            </div>
+            <div class="control">
+                <button class="button is-primary" onclick="submitSelection()">Combine</button>
+            </div>
+        </form>
     </div>
-    <br>
-    <input type="button" value="combine" onclick="submitSelection()">
-</form>
+</section>
