--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -5,7 +5,7 @@
                 <!-- Sheets will be dynamically added here -->
             </div>
             <div class="control">
-                <button class="button is-primary" onclick="submitSelection()">Combine</button>
+                <button id="submit-button" class="button is-primary" onclick="submitSelection()">Combine</button>
             </div>
         </form>
     </div>
