--- a/html/plannings/combine-sheets-progress.html
+++ b/html/plannings/combine-sheets-progress.html
@@ -1,8 +1,9 @@
-<section class="section"></section>
-<div class="container">
-    <div class="control">
-        <span id="spinner" class="icon is-hidden">
-            <i class="fas fa-spinner fa-spin"></i>
-        </span>
+<section id="section-1" class="section">
+    <div class="container has-text-centered">  <!-- Use has-text-centered to center text -->
+        <div class="control">
+            <span id="spinner" class="icon is-large is-hidden">
+                <i class="fas fa-spinner fa-spin fa-3x"></i> <!-- Use fa-3x for a larger spinner -->
+            </span>
+        </div>
     </div>
-</div>
+</section>
