--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -1,4 +1,4 @@
-<section id="section-1" class="section">
+<section id="user-input" class="section">
     <div class="container">
         <form id="sheetsForm">
             <div id="sheetsList" class="field">
