--- a/html/plannings/combine-sheets-progress.html
+++ b/html/plannings/combine-sheets-progress.html
@@ -1,7 +1,7 @@
-<section id="section-1" class="section">
+<section id="progress" class="section is-hidden">
     <div class="container has-text-centered">  <!-- Use has-text-centered to center text -->
         <div class="control">
-            <span id="spinner" class="icon is-large is-hidden">
+            <span id="spinner" class="icon is-large">
                 <i class="fas fa-spinner fa-spin fa-3x"></i> <!-- Use fa-3x for a larger spinner -->
             </span>
         </div>
