--- a/html/plannings/combine-sheets-progress.html
+++ b/html/plannings/combine-sheets-progress.html
@@ -1,4 +1,4 @@
-<section id="progress" class="section is-hidden">
+<section id="progress" class="section is-hidden content">
     <div class="container has-text-centered">  <!-- Use has-text-centered to center text -->
         <div class="control">
             <span id="spinner" class="icon is-large">
