add reset button

--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -7,6 +7,9 @@
             <div class="control">
                 <button id="submit-button" class="button is-primary" onclick="submitSelection()">Combine</button>
             </div>
+            <div class="control">
+                <button id="reset-button" class="button is-light" onclick="resetSheet()">Reset</button>
+            </div>
         </form>
     </div>
 </section>
