adjusted css for buttons

--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -4,11 +4,13 @@
             <div id="sheetsList" class="field">
                 <!-- Sheets will be dynamically added here -->
             </div>
-            <div class="control">
-                <button id="submit-button" class="button is-primary" onclick="submitSelection()">Combine</button>
-            </div>
-            <div class="control">
-                <button id="reset-button" class="button is-light" onclick="resetSheet()">Reset</button>
+            <div class="field is-flex is-justify-content-space-between">
+                <div class="control" style="width: 40%;">
+                    <button id="submit-button" class="button is-primary" onclick="submitSelection()">Combine</button>
+                </div>
+                <div class="control" style="width: 40%;">
+                    <button id="reset-button" class="button is-light" onclick="resetSheet()">Reset</button>
+                </div>
             </div>
         </form>
     </div>
