--- a/html/global/progress.html
+++ b/html/global/progress.html
@@ -1,4 +1,4 @@
-<section id="progress" class="section is-hidden content"></section>
+<section id="progress" class="section is-hidden content" style="height:200px"></section>
     <div class="container has-text-centered">  <!-- Use has-text-centered to center text -->
         <div class="control">
             <span id="spinner" class="icon is-large">
