update html footer header progress

--- a/html/global/footer.html
+++ b/html/global/footer.html
@@ -1,11 +1,6 @@
-<footer class="has-background-primary p-3">
-    <div class="container">
-        <div class="columns is-vcentered">
-            <div class="column has-text-centered">
-                <p>
-                    Powered by <a href="https://bimsolutionscentre.com" target="_blank" class="has-text-white">bimsolutionscentre.com</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
+<div class=" has-background-primary p-3 has-text-centered"style="height:40px">
+    <p>
+      Powered by <a href=" https://bimsolutionscentre.com" target="_blank" class="has-text-white">
+        bimsolutionscentre.com</a>
+    </p>
+</div>
