--- a/html/global/header.html
+++ b/html/global/header.html
@@ -1,7 +1,4 @@
-<header class="has-background-primary p-3">
-    <div class="container">
-        <div class="columns is-vcentered">
-            <img src="assets/logo.png" alt="FAS Logo" width="50">
-        </div>
-    </div>
-</header>
+<div class=" has-background-primary p-3 has-text-centered " style="height:60px">
+    <img src="assets/logo.png" alt="FAS Logo" width="36">
+    <a href="https://findaservice.fr" class="has-text-white" style="font-size: 20px;">findaservice.fr</a>
+</div>
