--- a/html/global/progress.html
+++ b/html/global/progress.html
@@ -1,9 +1,7 @@
-<section id="progress" class="section is-hidden content"></section>
-<div class="container has-text-centered"> <!-- Use has-text-centered to center text -->
+<div id="progress" class="has-text-centered is-hidden">
     <div class="control">
         <span id="spinner" class="icon is-large" style="height:200px">
-            <i class="fas fa-spinner fa-spin fa-3x"></i> <!-- Use fa-3x for a larger spinner -->
+            <i class="fas fa-spinner fa-spin fa-3x"></i>
         </span>
     </div>
 </div>
-</section>
