reassign the button onclick inline

--- a/html/plannings/combine-sheets.html
+++ b/html/plannings/combine-sheets.html
@@ -6,10 +6,10 @@
             </div>
             <div class="field is-flex is-justify-content-space-between">
                 <div class="control" style="width: 40%;">
-                    <button id="submit-button" class="button is-primary" >Combine</button>
+                    <button id="submit-button" class="button is-primary" onclick="submitSelection()" >Combine</button>
                 </div>
                 <div class="control" style="width: 40%;">
-                    <button id="reset-button" class="button is-light" >Reset</button>
+                    <button id="reset-button" class="button is-light" onclick="resetSheet()" >Reset</button>
                 </div>
             </div>
         </form>
