update link button

--- a/html/global/link.html
+++ b/html/global/link.html
@@ -1,6 +1,5 @@
 <div id="link" class="has-text-centered is-hidden" style="height:200px">
-    <div class=" control">
-        <button id="linkButton" class="button is-primary">My Button</button>
-        <a id="linkUrl" href="https://example.com" class="button is-link">Go to Link</a>
+    <div class="control">
+        <a id="linkUrl" href="https://example.com" class="button is-primary">Go to Link</a>
     </div>
 </div>
