--- a/html/global/link.html
+++ b/html/global/link.html
@@ -1,5 +1,5 @@
-<div id="link" class="has-text-centered is-hidden" style="height:200px">
-    <div class="control">
+<div id="link" class="has-text-centered is-hidden" style="height: 200px;">
+    <div class="control is-flex is-align-items-center is-justify-content-center" style="height: 100%;">
         <a id="linkUrl" href="https://example.com" class="button is-primary">Go to Link</a>
     </div>
 </div>
