--- a/html/global/title.html
+++ b/html/global/title.html
@@ -1,1 +1,1 @@
-<div id="title" class="has-text-centered py-6" style="height: 200px;"></div>
+<div id="title" class="has-text-centered py-6" style="height: 200px;">My Title</div>
