implement incremental id assigning for html elements

--- a/html/global/button.html
+++ b/html/global/button.html
@@ -1,5 +1,5 @@
-<div id="link" class="has-text-centered is-hidden" style="height: 200px;">
+<div id="button-container-{{it}}" class="has-text-centered is-hidden" style="height: 200px;">
     <div class="control is-flex is-align-items-center is-justify-content-center" style="height: 100%;">
-        <button id="linkButton" class="button is-link is-primary">My Button</button>
+        <button id="lbutton-{{it}}" class="button is-link is-primary">My Button</button>
     </div>
 </div>
