--- a/html/global/progress.html
+++ b/html/global/progress.html
@@ -1,4 +1,4 @@
-<div id="progress" class="has-text-centered is-hidden">
+<div id="progress" class="has-text-centered">
     <div class="control">
         <span id="spinner" class="icon is-large" style="height:200px">
             <i class="fas fa-spinner fa-spin fa-3x"></i>
