button container height

--- a/html/global/button.html
+++ b/html/global/button.html
@@ -1,4 +1,4 @@
-<div id="button-container-{{it}}" class="has-text-centered" style="height: 200px;">
+<div id="button-container-{{it}}" class=" button-container has-text-centered">
     <div class="control is-flex is-align-items-center is-justify-content-center" style="height: 100%;">
         <button id="button-{{it}}" class="button is-link is-primary">My Button</button>
     </div>
