--- a/html/global/title.html
+++ b/html/global/title.html
@@ -1,1 +1,3 @@
-<div id="title-{{it}}" class="has-text-centered" style="height: 50px;">My Title</div>
+<div id="title-{{it}}" class="has-text-centered is-flex is-justify-content-center is-align-items-center" style="height: 50px;">
+    My Title
+  </div>
