added appscript geneirc html template

--- a/html/global/button.html
+++ b/html/global/button.html
@@ -1,5 +1,5 @@
 <div id="button-container-{{it}}" class=" button-container has-text-centered">
     <div class="control is-flex is-align-items-center is-justify-content-center" style="height: 100%;">
-        <button id="button-{{it}}" class="button is-link is-primary" style="width: 150px">My Button</button>
+        <button id="button-{{it}}" class="button is-link is-primary" style="min-width: 150px">My Button</button>
     </div>
 </div>
